update description/title for expo publish

--- a/app.json
+++ b/app.json
@@ -29,6 +29,8 @@
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
-    }
+    },
+    "description": "A quick way to get 4 exercises that you should complete as a circuit for as many reps as possible in 15 minutes. Exercises are randomly assigned, so each time you open up the app and tap for a workout, you get a different set for variety. A timer starts and will alert the user when it is time to rest.\n\n",
+    "githubUrl": "https://github.com/JSinkler713/15-minute-workout"
   }
 }
