--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
-    "expo-av": "~9.1.2"
+    "expo-av": "~9.1.2",
+    "expo-ads-admob": "~10.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
