--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
     "expo-av": "~9.1.2",
-    "expo-ads-admob": "~10.0.4"
+    "expo-ads-admob": "~10.0.4",
+    "expo-device": "~3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
